# pathe

./: .gitignore  README.md  pathe_checker.py  pyproject.toml  read.me  requirements.txt
.github/workflows/: pathe_checker.yml
data/: specials_cache.json
tests/: test_pathe_checker.py
